working navigation - theme is not functioning

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,7 +79,7 @@
             android:name="com.abrnoc.application.presentation.MainActivity"
             android:configChanges="uiMode"
             android:exported="true"
-            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
